Overview of changes in snapd-glib 1.26

    * New API:
      - snapd_client_login2_async
      - snapd_client_login2_finish
      - snapd_client_login2_sync
      - snapd_client_switch_async
      - snapd_client_switch_finish
      - snapd_client_switch_sync
    * Deprecated API:
      - snapd_client_login_async
      - snapd_client_login_finish
      - snapd_client_login_sync
    * Implement snapd_client_switch
    * Implement new login API

Overview of changes in snapd-glib 1.25

    * New API:
      - snapd_client_alias_async
      - snapd_client_alias_finish
      - snapd_client_alias_sync
      - snapd_client_unalias_async
      - snapd_client_unalias_finish
      - snapd_client_unalias_sync
      - snapd_client_prefer_async
      - snapd_client_prefer_finish
      - snapd_client_prefer_sync
      - snapd_client_get_apps_sync
      - snapd_client_get_apps_finish
      - snapd_client_get_apps_async
      - snapd_alias_get_app_auto
      - snapd_alias_get_command
      - snapd_alias_get_app_manual
      - snapd_app_get_active
      - snapd_app_get_enabled
      - snapd_app_get_snap
      - snapd_snap_get_broken
    * Deprecated API:
      - snapd_client_enable_aliases_async
      - snapd_client_enable_aliases_finish
      - snapd_client_enable_aliases_sync
      - snapd_client_disable_aliases_async
      - snapd_client_disable_aliases_finish
      - snapd_client_disable_aliases_sync
      - snapd_client_reset_aliases_async
      - snapd_client_reset_aliases_finish
      - snapd_client_reset_aliases_sync
      - snapd_app_get_aliases
    * Implement v2 alias API
    * Implement snapd_client_get_apps
    * Fix memory handling in create user methods
    * Implement user creation in snapd-qt
    * Fix memory leaks due to missing destructor chain
    * Refactor internal message code

Overview of changes in snapd-glib 1.24

    * New API:
      - snapd_client_get_socket_path
      - snapd_client_set_socket_path
      - snapd_snap_get_channels