@@ -197,6 +197,9 @@ snapd_client_create_user_finish
 snapd_client_create_users_sync
 snapd_client_create_users_async
 snapd_client_create_users_finish
+snapd_client_get_users_sync
+snapd_client_get_users_async
+snapd_client_get_users_finish
 snapd_client_get_sections_sync
 snapd_client_get_sections_async
 snapd_client_get_sections_finish
@@ -247,6 +250,7 @@ SnapdGetSections
 SnapdGetSnap
 SnapdGetSnaps
 SnapdGetSystemInfo
+SnapdGetUsers
 SnapdPostAliases
 SnapdPostAssertions
 SnapdPostBuy
