@@ -7,11 +7,15 @@ Overview of changes in snapd-glib 1.26
       - snapd_client_switch_async
       - snapd_client_switch_finish
       - snapd_client_switch_sync
+      - snapd_client_get_users_async
+      - snapd_client_get_users_finish
+      - snapd_client_get_users_sync
     * Deprecated API:
       - snapd_client_login_async
       - snapd_client_login_finish
       - snapd_client_login_sync
     * Implement snapd_client_switch
+    * Implement snapd_client_get_users
     * Implement new login API
 
 Overview of changes in snapd-glib 1.25
